--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main>
         <ul>
-            <li><a href="beam.html"><img src="icon/beam.png" class="link-icon" alt="">Beam Algorithm Simulator</a></li>
+            <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
             <li><a href="Syllabus.html"><img src="icon/syllabus.png" class="link-icon" alt="">Update Syllabus</a></li>
             <li><a href="Rubric.html"><img src="icon/rubric.png" class="link-icon" alt="">Grading Rubric</a></li>
             <li><a href="StudentPlan.html"><img src="icon/student-plan.png" class="link-icon" alt="">Student Academic Plan</a></li>
