--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><a href="Syllabus.html"><img src="icon/syllabus.png" class="link-icon" alt="">Update Syllabus</a></li>
             <li><a href="Rubric.html"><img src="icon/rubric.png" class="link-icon" alt="">Grading Rubric</a></li>
             <li><a href="StudentPlan.html"><img src="icon/student-plan.png" class="link-icon" alt="">Student Academic Plan</a></li>
-            <li><a href="Flashcard.html"><img src="icon/flashcard.png" class="link-icon" alt="">Flashcards</a></li>
+            <li><a href="flashcard.html"> Flashcards</a></li>
             <li><a href="BinaryGame.html"><img src="icon/binary-game.png" class="link-icon" alt="">Binary Game</a></li>
             <li><a href="Diffie-Hellman.html"><img src="icon/diffie-hellman.png" class="link-icon" alt="">Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="Protocols.html"><img src="icon/protocols.png" class="link-icon" alt="">Protocol List</a></li>
