--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main>
         <ul>
             <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
-            <li><a href="cve.html"></a></li>
+            <li><a href="cve.html"> CVE Database Search</a></li>
             <li><a href="Rubric.html"><img src="icon/rubric.png" class="link-icon" alt="">Grading Rubric</a></li>
             <li><a href="StudentPlan.html"><img src="icon/student-plan.png" class="link-icon" alt="">Student Academic Plan</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
