--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li><a href="BinaryGame.html"><img src="icon/binary-game.png" class="link-icon" alt="">Binary Game</a></li>
             <li><a href="Diffie-Hellman.html"><img src="icon/diffie-hellman.png" class="link-icon" alt="">Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="Protocols.html"><img src="icon/protocols.png" class="link-icon" alt="">Protocol List</a></li>
-            <li><a href="NAT.html"><img src="icon/nat.png" class="link-icon" alt="">Nat Translation</a></li>
+            <li><a href="nat.html"> Nat Translation</a></li>
             <li><a href="IPv6.html"><img src="icon/ipv6.png" class="link-icon" alt="">IP Version 6</a></li>
             <li><a href="Hashing.html"><img src="icon/hashing.png" class="link-icon" alt="">Hashing Calculator</a></li>
             <li><a href="Firewall.html"><img src="icon/firewall.png" class="link-icon" alt="">Stateful Firewall Simulator</a></li>
