--- a/index.html
+++ b/index.html
@@ -63,20 +63,21 @@
     </header>
     <main>
         <ul>
-            <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
-            <li><a href="cve.html"> CVE Database Search</a></li>
-            <li><a href="Rubric.html"><img src="icon/rubric.png" class="link-icon" alt="">Grading Rubric</a></li>
-            <li><a href="StudentPlan.html"><img src="icon/student-plan.png" class="link-icon" alt="">Student Academic Plan</a></li>
-            <li><a href="flashcard.html"> Flashcards</a></li>
-            <li><a href="BinaryGame.html"><img src="icon/binary-game.png" class="link-icon" alt="">Binary Game</a></li>
-            <li><a href="Diffie-Hellman.html"><img src="icon/diffie-hellman.png" class="link-icon" alt="">Diffie-Hellman Key Exchange Color Simulation</a></li>
-            <li><a href="Protocols.html"><img src="icon/protocols.png" class="link-icon" alt="">Protocol List</a></li>
-            <li><a href="nat.html"> Nat Translation</a></li>
-            <li><a href="IPv6.html"><img src="icon/ipv6.png" class="link-icon" alt="">IP Version 6</a></li>
-            <li><a href="Hashing.html"><img src="icon/hashing.png" class="link-icon" alt="">Hashing Calculator</a></li>
-            <li><a href="Firewall.html"><img src="icon/firewall.png" class="link-icon" alt="">Stateful Firewall Simulator</a></li>
             <li><a href="ACL.html"><img src="icon/acl.png" class="link-icon" alt="">Access Control List Generator</a></li>
             <li><a href="AtoD.html"><img src="icon/analog-digital.png" class="link-icon" alt="">Analog to Digital</a></li>
+            <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
+            <li><a href="BinaryGame.html"><img src="icon/binary-game.png" class="link-icon" alt="">Binary Game</a></li>
+            <li><a href="cve.html"> CVE Database Search</a></li>
+            <li><a href="Diffie-Hellman.html"><img src="icon/diffie-hellman.png" class="link-icon" alt="">Diffie-Hellman Key Exchange Color Simulation</a></li>
+            <li><a href="Firewall.html"><img src="icon/firewall.png" class="link-icon" alt="">Stateful Firewall Simulator</a></li>
+            <li><a href="flashcard.html"> Flashcards</a></li>
+            <li><a href="Hashing.html"><img src="icon/hashing.png" class="link-icon" alt="">Hashing Calculator</a></li>
+            <li><a href="IPv6.html"><img src="icon/ipv6.png" class="link-icon" alt="">IP Version 6</a></li>      
+            <li><a href="nat.html"> Nat Translation</a></li>
+            <li><a href="password.html"> Nat Password Strength Analyzer</a></li>
+            <li><a href="Protocols.html"><img src="icon/protocols.png" class="link-icon" alt="">Protocol List</a></li> 
+            <li><a href="Rubric.html"><img src="icon/rubric.png" class="link-icon" alt="">Grading Rubric</a></li>
+            <li><a href="StudentPlan.html"><img src="icon/student-plan.png" class="link-icon" alt="">Student Academic Plan</a></li>           
         </ul>
     </main>
 </body>
