--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <li><a href="acl.html"> Access Control List Generator</a></li>
             <li><a href="atod.html"> Analog to Digital</a></li>
             <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
-            <li><a href="BinaryGame.html"><img src="icon/binary-game.png" class="link-icon" alt="">Binary Game</a></li>
+            <li><a href="binary.html"> Binary Game</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
-            <li><a href="Diffie-Hellman.html"><img src="icon/diffie-hellman.png" class="link-icon" alt="">Diffie-Hellman Key Exchange Color Simulation</a></li>
-            <li><a href="Firewall.html"> Stateful Firewall Simulator</a></li>
+            <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
+            <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
             <li><a href="Hashing.html"> Hashing Calculator</a></li>
             <li><a href="IPv6.html"><img src="icon/ipv6.png" class="link-icon" alt="">IP Version 6</a></li>      
