--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
-            <li><a href="Hashing.html"> Hashing Calculator</a></li>
+            <li><a href="hash.html"> Hashing Calculator</a></li>
             <li><a href="IPv6.html"><img src="icon/ipv6.png" class="link-icon" alt="">IP Version 6</a></li>      
             <li><a href="nat.html"> Nat Translation</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
