--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
             <li><a href="hash.html"> Hashing Calculator</a></li>
-            <li><a href="IPv6.html"><img src="icon/ipv6.png" class="link-icon" alt="">IP Version 6</a></li>      
+            <li><a href="ipv6.html"> IP Version 6</a></li>      
             <li><a href="nat.html"> Nat Translation</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
-            <li><a href="Protocols.html"><img src="icon/protocols.png" class="link-icon" alt="">Protocol List</a></li> 
-            <li><a href="Rubric.html"><img src="icon/rubric.png" class="link-icon" alt="">Grading Rubric</a></li>
-            <li><a href="StudentPlan.html"><img src="icon/student-plan.png" class="link-icon" alt="">Student Academic Plan</a></li>           
+            <li><a href="protocols.html">Protocol List</a></li> 
+            <li><a href="rubric.html">Grading Rubric</a></li>
+            <li><a href="plan.html"> Student Academic Plan</a></li>           
         </ul>
     </main>
 </body>
