--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
             <li><a href="hash.html"> Hashing Calculator</a></li>
-            <li><a href="ipv6.html"> IP Version 6</a></li>      
+            <li><a href="ipv6.html"> IP Version 6</a></li>   
+            <li><a href="modulus.html"> Modulus Math</a></li> 
             <li><a href="nat.html"> Nat Translation</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
-            <li><a href="protocols.html">Protocol List</a></li> 
-            <li><a href="rubric.html">Grading Rubric</a></li>
+            <li><a href="primes.html"> Prime Number generator</a></li> 
+            <li><a href="protocols.html"> Protocol List</a></li> 
+            <li><a href="rubric.html"> Grading Rubric</a></li>
             <li><a href="plan.html"> Student Academic Plan</a></li>           
         </ul>
     </main>
