--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <li><a href="atod.html"> Analog to Digital</a></li>
             <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
             <li><a href="binary.html"> Binary Game</a></li>
+            <li><a href="caesar.html"> Caesar Cypher Tool</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
