--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <li><a href="acl.html"> Access Control List Generator</a></li>
             <li><a href="atod.html"> Analog to Digital</a></li>
+            <li><a href="attackgame.html"> Cyber Attack Game</a></li>
             <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
             <li><a href="binary.html"> Binary Game</a></li>
             <li><a href="caesar.html"> Caesar Cypher Tool</a></li>
