--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li><a href="password.html"> Password Strength Analyzer</a></li>
             <li><a href="primes.html"> Prime Number generator</a></li> 
             <li><a href="protocols.html"> Protocol List</a></li> 
+            <li><a href="rsa.html"> Using RSA to Generate Asymmetrical Keys</a></li>
             <li><a href="rubric.html"> Grading Rubric</a></li>
             <li><a href="plan.html"> Student Academic Plan</a></li>           
         </ul>
