--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <li><a href="modulus.html"> Modulus Math</a></li> 
             <li><a href="nat.html"> Nat Translation</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
-            <li><a href="primes.html"> Prime Number generator</a></li> 
+            <li><a href="prime.html"> Prime Number Test</a></li> 
+            <li><a href="primes.html"> Prime Number Generator</a></li> 
             <li><a href="protocols.html"> Protocol List</a></li> 
             <li><a href="rsa.html"> Using RSA to Generate Asymmetrical Keys</a></li>
             <li><a href="rsacalc.html"> Calculating asymmetrical Keys with RSA</a></li>
