--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li><a href="attackgame.html"> Cyber Attack Game</a></li>
             <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
             <li><a href="binary.html"> Binary Game</a></li>
-            <li><a href="caesar.html"> Caesar Cypher Tool</a></li>
+            <li><a href="caesar.html"> Caesar Cipher Tool</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
@@ -77,13 +77,13 @@
             <li><a href="hash.html"> Hashing Calculator</a></li>
             <li><a href="ipv6.html"> IP Version 6</a></li>   
             <li><a href="modulus.html"> Modulus Math</a></li> 
-            <li><a href="nat.html"> Nat Translation</a></li>
+            <li><a href="nat.html"> NAT Translation</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
             <li><a href="prime.html"> Prime Number Test</a></li> 
             <li><a href="primes.html"> Prime Number Generator</a></li> 
             <li><a href="protocols.html"> Protocol List</a></li> 
             <li><a href="rsa.html"> Using RSA to Generate Asymmetrical Keys</a></li>
-            <li><a href="rsacalc.html"> Calculating asymmetrical Keys with RSA</a></li>
+            <li><a href="rsacalc.html"> Calculating Asymmetrical Keys with RSA</a></li>
             <li><a href="rubric.html"> Grading Rubric</a></li>
             <li><a href="plan.html"> Student Academic Plan</a></li>           
         </ul>
