--- a/protocols.html
+++ b/protocols.html
@@ -34,6 +34,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            margin-bottom: 20px;
         }
         .protocol-buttons a {
             display: inline-block;
@@ -49,6 +50,21 @@
         }
         .protocol-buttons a:hover {
             background-color: #900;
+        }
+        .protocol-table {
+            margin: 0 auto;
+            border-collapse: collapse;
+            width: 90%;
+            background-color: #fff;
+        }
+        .protocol-table th, .protocol-table td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+        .protocol-table th {
+            background-color: #333;
+            color: #fff;
         }
         footer {
             background-color: #333;
@@ -88,6 +104,117 @@
             <a href="ntp.html">NTP</a>
             <a href="syslog.html">Syslog</a>
         </div>
+        <table class="protocol-table">
+            <thead>
+                <tr>
+                    <th>Protocol</th>
+                    <th>Description</th>
+                    <th>Why Monitor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>HTTP (HyperText Transfer Protocol)</td>
+                    <td>Used for transmitting web pages on the internet.</td>
+                    <td>Frequently targeted for web-based attacks such as SQL injection, cross-site scripting (XSS), and malware delivery.</td>
+                </tr>
+                <tr>
+                    <td>HTTPS (HyperText Transfer Protocol Secure)</td>
+                    <td>Secure version of HTTP that uses encryption (SSL/TLS).</td>
+                    <td>Ensures secure communication, but can also hide malicious activities due to encryption.</td>
+                </tr>
+                <tr>
+                    <td>DNS (Domain Name System)</td>
+                    <td>Translates domain names into IP addresses.</td>
+                    <td>Vulnerable to attacks like DNS spoofing, cache poisoning, and DDoS attacks.</td>
+                </tr>
+                <tr>
+                    <td>SMTP (Simple Mail Transfer Protocol)</td>
+                    <td>Protocol for sending emails.</td>
+                    <td>Commonly used for phishing, spamming, and spreading malware.</td>
+                </tr>
+                <tr>
+                    <td>IMAP (Internet Message Access Protocol)</td>
+                    <td>Used by email clients to retrieve messages from a mail server.</td>
+                    <td>Can be a vector for email-based threats and account compromise.</td>
+                </tr>
+                <tr>
+                    <td>POP3 (Post Office Protocol 3)</td>
+                    <td>Another protocol for retrieving email from a server.</td>
+                    <td>Similar to IMAP, it’s essential for detecting email-based threats.</td>
+                </tr>
+                <tr>
+                    <td>FTP (File Transfer Protocol)</td>
+                    <td>Used for transferring files between systems.</td>
+                    <td>Vulnerable to attacks like credential theft, data interception, and unauthorized access.</td>
+                </tr>
+                <tr>
+                    <td>SFTP (SSH File Transfer Protocol)</td>
+                    <td>Secure version of FTP using SSH for encryption.</td>
+                    <td>Ensures secure file transfers but should be monitored for unusual activities.</td>
+                </tr>
+                <tr>
+                    <td>SSH (Secure Shell)</td>
+                    <td>Protocol for secure remote login and command execution.</td>
+                    <td>Critical for detecting unauthorized access and brute-force attacks.</td>
+                </tr>
+                <tr>
+                    <td>Telnet</td>
+                    <td>Protocol for remote login, but lacks encryption.</td>
+                    <td>Highly insecure, monitoring is essential to prevent unauthorized access and data interception.</td>
+                </tr>
+                <tr>
+                    <td>RDP (Remote Desktop Protocol)</td>
+                    <td>Protocol for remote desktop access.</td>
+                    <td>Commonly targeted for remote access attacks and ransomware deployment.</td>
+                </tr>
+                <tr>
+                    <td>SMB (Server Message Block)</td>
+                    <td>Protocol for file sharing and network browsing.</td>
+                    <td>Vulnerable to exploits like EternalBlue, used in ransomware attacks.</td>
+                </tr>
+                <tr>
+                    <td>LDAP (Lightweight Directory Access Protocol)</td>
+                    <td>Protocol for accessing and managing directory services.</td>
+                    <td>Key target for directory traversal attacks and unauthorized access to directory information.</td>
+                </tr>
+                <tr>
+                    <td>SNMP (Simple Network Management Protocol)</td>
+                    <td>Protocol for network management and monitoring devices.</td>
+                    <td>Can be exploited for reconnaissance and unauthorized network control.</td>
+                </tr>
+                <tr>
+                    <td>NTP (Network Time Protocol)</td>
+                    <td>Protocol for synchronizing clocks over a network.</td>
+                    <td>Can be used in DDoS amplification attacks.</td>
+                </tr>
+                <tr>
+                    <td>ICMP (Internet Control Message Protocol)</td>
+                    <td>Used for diagnostic and error messages (e.g., ping).</td>
+                    <td>Can be exploited for network scanning and DDoS attacks.</td>
+                </tr>
+                <tr>
+                    <td>TFTP (Trivial File Transfer Protocol)</td>
+                    <td>Simplified version of FTP, often used for booting network devices.</td>
+                    <td>Lacks security features, making it vulnerable to unauthorized file transfers.</td>
+                </tr>
+                <tr>
+                    <td>MSSQL (Microsoft SQL Server Protocol)</td>
+                    <td>Protocol for accessing and managing Microsoft SQL Server databases.</td>
+                    <td>Targeted for SQL injection attacks and data breaches.</td>
+                </tr>
+                <tr>
+                    <td>MySQL Protocol</td>
+                    <td>Protocol for accessing and managing MySQL databases.</td>
+                    <td>Similar to MSSQL, it’s a common target for SQL injection and other database attacks.</td>
+                </tr>
+                <tr>
+                    <td>Syslog</td>
+                    <td>Protocol for logging system messages and events.</td>
+                    <td>Essential for detecting and responding to security incidents through log analysis.</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <footer>
         &copy; 2024 Protocol Analysis. All rights reserved.
