--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <li><a href="rsa.html"> Using RSA to Generate Asymmetrical Keys</a></li>
             <li><a href="rsacalc.html"> Calculating Asymmetrical Keys with RSA</a></li>
             <li><a href="rubric.html"> Grading Rubric</a></li>
+             <li><a href="syo701.html"> Security+ Practice Exam</a></li>           
             <li><a href="plan.html"> Student Academic Plan</a></li>           
         </ul>
     </main>
