--- a/pop3.html
+++ b/pop3.html
@@ -16,6 +16,13 @@
             text-align: center;
             color: #d9534f;
         }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
         h2 {
             color: #d9534f;
             border-bottom: 2px solid #333;
@@ -79,6 +86,10 @@
 <body>
 
 <h1>POP3 Header Illustration</h1>
+
+<div class="description-box">
+    <p>POP3 (Post Office Protocol 3) is an application-layer Internet standard protocol used by local email clients to retrieve email from a remote server over a TCP/IP connection. POP3 allows users to download their emails from the server to their local device, making it accessible offline. The protocol supports basic functions such as user authentication, message retrieval, and deletion.</p>
+</div>
 
 <h2>POP3 Commands</h2>
 <table>
