--- a/ip.html
+++ b/ip.html
@@ -7,116 +7,175 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: grey;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
+        }
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>IP Header Illustration</h1>
+
+<div class="description-box">
+    <p>The Internet Protocol (IP) is a set of rules governing the format of data sent over the Internet or other networks. IP addresses, which are used to uniquely identify devices on a network, are part of this protocol. IP is responsible for addressing and routing packets of data so that they can travel across networks and arrive at the correct destination.</p>
+</div>
+
+<h2>IP Header</h2>
 <table>
     <tr>
-        <th colspan="1"><a href="#version">Version</a> (4 bits)</th>
-        <th colspan="1"><a href="#header-length">Header Length</a> (4 bits)</th>
-        <th colspan="2"><a href="#tos">Type of Service</a> (8 bits)</th>
-        <th colspan="4"><a href="#total-length">Total Length</a> (16 bits)</th>
+        <th colspan="4"><a onclick="showDescription('desc-version')">Version</a> (4 bits)</th>
+        <th colspan="4"><a onclick="showDescription('desc-ihl')">IHL</a> (4 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-dscp')">DSCP</a> (6 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-ecn')">ECN</a> (2 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-totallength')">Total Length</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="4"><a href="#identification">Identification</a> (16 bits)</th>
-        <th colspan="1"><a href="#flags">Flags</a> (3 bits)</th>
-        <th colspan="3"><a href="#fragment-offset">Fragment Offset</a> (13 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-identification')">Identification</a> (16 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-flags')">Flags</a> (3 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-fragmentoffset')">Fragment Offset</a> (13 bits)</th>
     </tr>
     <tr>
-        <th colspan="2"><a href="#ttl">Time to Live</a> (8 bits)</th>
-        <th colspan="2"><a href="#protocol">Protocol</a> (8 bits)</th>
-        <th colspan="4"><a href="#header-checksum">Header Checksum</a> (16 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-ttl')">Time to Live</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-protocol')">Protocol</a> (8 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-headerchecksum')">Header Checksum</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#source-address">Source Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-sourceaddress')">Source Address</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#destination-address">Destination Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-destinationaddress')">Destination Address</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#options">Options</a> (variable)</th>
+        <th colspan="32"><a onclick="showDescription('desc-options')">Options + Padding</a> (Variable length)</th>
     </tr>
 </table>
 
-<div class="description" id="version">
+<div class="description" id="desc-version">
     <h2>Version (4 bits)</h2>
-    <p>Indicates the version of the IP protocol (e.g., IPv4 or IPv6).</p>
+    <p>Indicates the version of the IP protocol. For IPv4, this value is 4. <a href="#desc-version">Back to header</a></p>
 </div>
-<div class="description" id="header-length">
-    <h2>Header Length (4 bits)</h2>
-    <p>Specifies the length of the IP header.</p>
+<div class="description" id="desc-ihl">
+    <h2>IHL (4 bits)</h2>
+    <p>Internet Header Length, the length of the IP header, measured in 32-bit words. <a href="#desc-ihl">Back to header</a></p>
 </div>
-<div class="description" id="tos">
-    <h2>Type of Service (8 bits)</h2>
-    <p>Specifies the quality of service for the packet.</p>
+<div class="description" id="desc-dscp">
+    <h2>DSCP (6 bits)</h2>
+    <p>DiffServ Code Point, used for packet classification. <a href="#desc-dscp">Back to header</a></p>
 </div>
-<div class="description" id="total-length">
+<div class="description" id="desc-ecn">
+    <h2>ECN (2 bits)</h2>
+    <p>Explicit Congestion Notification, used for indicating network congestion. <a href="#desc-ecn">Back to header</a></p>
+</div>
+<div class="description" id="desc-totallength">
     <h2>Total Length (16 bits)</h2>
-    <p>Specifies the total length of the IP packet (header + data).</p>
+    <p>The total length of the IP packet (header + data), in bytes. <a href="#desc-totallength">Back to header</a></p>
 </div>
-<div class="description" id="identification">
+<div class="description" id="desc-identification">
     <h2>Identification (16 bits)</h2>
-    <p>Used for uniquely identifying fragments of an original IP datagram.</p>
+    <p>Identifies the fragments of a single IP packet. <a href="#desc-identification">Back to header</a></p>
 </div>
-<div class="description" id="flags">
+<div class="description" id="desc-flags">
     <h2>Flags (3 bits)</h2>
-    <p>Used to control or identify fragments.</p>
+    <p>Control flags for fragmenting packets. <a href="#desc-flags">Back to header</a></p>
 </div>
-<div class="description" id="fragment-offset">
+<div class="description" id="desc-fragmentoffset">
     <h2>Fragment Offset (13 bits)</h2>
-    <p>Used to indicate the position of the fragment in the original IP datagram.</p>
+    <p>Indicates the position of the fragment in the original packet. <a href="#desc-fragmentoffset">Back to header</a></p>
 </div>
-<div class="description" id="ttl">
-    <h2>Time to Live (TTL) (8 bits)</h2>
-    <p>Specifies the time limit for the packet; used to prevent routing loops.</p>
+<div class="description" id="desc-ttl">
+    <h2>Time to Live (8 bits)</h2>
+    <p>Indicates the maximum time the packet is allowed to remain in the network. <a href="#desc-ttl">Back to header</a></p>
 </div>
-<div class="description" id="protocol">
+<div class="description" id="desc-protocol">
     <h2>Protocol (8 bits)</h2>
-    <p>Indicates the protocol used in the data portion of the IP datagram.</p>
+    <p>Indicates the next level protocol used in the data portion of the IP datagram. <a href="#desc-protocol">Back to header</a></p>
 </div>
-<div class="description" id="header-checksum">
+<div class="description" id="desc-headerchecksum">
     <h2>Header Checksum (16 bits)</h2>
-    <p>Used for error-checking the header.</p>
+    <p>A checksum on the header to ensure integrity. <a href="#desc-headerchecksum">Back to header</a></p>
 </div>
-<div class="description" id="source-address">
+<div class="description" id="desc-sourceaddress">
     <h2>Source Address (32 bits)</h2>
-    <p>IP address of the sender.</p>
+    <p>Specifies the sender's IP address. <a href="#desc-sourceaddress">Back to header</a></p>
 </div>
-<div class="description" id="destination-address">
+<div class="description" id="desc-destinationaddress">
     <h2>Destination Address (32 bits)</h2>
-    <p>IP address of the receiver.</p>
+    <p>Specifies the receiver's IP address. <a href="#desc-destinationaddress">Back to header</a></p>
 </div>
-<div class="description" id="options">
-    <h2>Options (variable)</h2>
-    <p>Used for various optional settings.</p>
+<div class="description" id="desc-options">
+    <h2>Options + Padding (Variable length)</h2>
+    <p>Optional fields used for various purposes, and padding to ensure the header is a multiple of 32 bits. <a href="#desc-options">Back to header</a></p>
 </div>
 
 </body>
