--- a/icmp.html
+++ b/icmp.html
@@ -7,63 +7,124 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: grey;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
+        }
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>ICMP Header Illustration</h1>
+
+<div class="description-box">
+    <p>The Internet Control Message Protocol (ICMP) is used by network devices, such as routers, to send error messages and operational information indicating success or failure when communicating with another IP address. ICMP is mainly used for diagnostic or control purposes, or generated in response to errors in IP operations. The most well-known ICMP messages are "ping" and "traceroute".</p>
+</div>
+
+<h2>ICMP Header</h2>
 <table>
     <tr>
-        <th colspan="2"><a href="#type">Type</a> (8 bits)</th>
-        <th colspan="2"><a href="#code">Code</a> (8 bits)</th>
-        <th colspan="4"><a href="#checksum">Checksum</a> (16 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-type')">Type</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-code')">Code</a> (8 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-checksum')">Checksum</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#rest-of-header">Rest of Header</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-restofheader')">Rest of Header</a> (32 bits)</th>
+    </tr>
+    <tr>
+        <th colspan="32"><a onclick="showDescription('desc-datasegment')">Data Segment</a> (Variable length)</th>
     </tr>
 </table>
 
-<div class="description" id="type">
+<div class="description" id="desc-type">
     <h2>Type (8 bits)</h2>
-    <p>Indicates the type of ICMP message.</p>
+    <p>Indicates the type of the ICMP message, such as Echo Request or Echo Reply. <a href="#desc-type">Back to header</a></p>
 </div>
-<div class="description" id="code">
+<div class="description" id="desc-code">
     <h2>Code (8 bits)</h2>
-    <p>Provides further information about the ICMP message type.</p>
+    <p>Provides further information about the type of the message. <a href="#desc-code">Back to header</a></p>
 </div>
-<div class="description" id="checksum">
+<div class="description" id="desc-checksum">
     <h2>Checksum (16 bits)</h2>
-    <p>Used for error-checking the ICMP header and data.</p>
+    <p>Used for error-checking the header and data. <a href="#desc-checksum">Back to header</a></p>
 </div>
-<div class="description" id="rest-of-header">
+<div class="description" id="desc-restofheader">
     <h2>Rest of Header (32 bits)</h2>
-    <p>This field varies based on the ICMP message type. It may include an identifier and sequence number for echo requests and replies, or a pointer to the error in the original message.</p>
+    <p>Additional information specific to the ICMP type and code. <a href="#desc-restofheader">Back to header</a></p>
+</div>
+<div class="description" id="desc-datasegment">
+    <h2>Data Segment (Variable length)</h2>
+    <p>The data payload of the ICMP message, which varies in length. <a href="#desc-datasegment">Back to header</a></p>
 </div>
 
 </body>
