--- a/tcp.html
+++ b/tcp.html
@@ -7,116 +7,160 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: grey;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
+        }
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>TCP Header Illustration</h1>
+
+<div class="description-box">
+    <p>The Transmission Control Protocol (TCP) is one of the main protocols of the Internet protocol suite. It originated in the initial network implementation in which it complemented the Internet Protocol (IP). Therefore, the entire suite is commonly referred to as TCP/IP. TCP provides reliable, ordered, and error-checked delivery of a stream of octets (bytes) between applications running on hosts communicating via an IP network. Major internet applications such as the World Wide Web, email, remote administration, and file transfer rely on TCP.</p>
+</div>
+
+<h2>TCP Header</h2>
 <table>
     <tr>
-        <th colspan="4"><a href="#source-port">Source Port</a> (16 bits)</th>
-        <th colspan="4"><a href="#destination-port">Destination Port</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-srcport')">Source Port</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-dstport')">Destination Port</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#sequence-number">Sequence Number</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-seqnum')">Sequence Number</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#ack-number">Acknowledgment Number</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-acknum')">Acknowledgment Number</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="2"><a href="#data-offset">Data Offset</a> (4 bits)</th>
-        <th colspan="1"><a href="#reserved">Reserved</a> (3 bits)</th>
-        <th colspan="5"><a href="#flags">Flags</a> (9 bits)</th>
+        <th colspan="4"><a onclick="showDescription('desc-dataoffset')">Data Offset</a> (4 bits)</th>
+        <th colspan="3"><a onclick="showDescription('desc-reserved')">Reserved</a> (3 bits)</th>
+        <th colspan="9"><a onclick="showDescription('desc-flags')">Flags</a> (9 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-winsize')">Window Size</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="4"><a href="#window-size">Window Size</a> (16 bits)</th>
-        <th colspan="4"><a href="#checksum">Checksum</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-checksum')">Checksum</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-urgptr')">Urgent Pointer</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="4"><a href="#urgent-pointer">Urgent Pointer</a> (16 bits)</th>
-        <th colspan="4"><a href="#options-padding">Options and Padding</a> (variable length)</th>
+        <th colspan="32"><a onclick="showDescription('desc-options')">Options + Padding</a> (Variable length)</th>
     </tr>
 </table>
 
-<div class="description" id="source-port">
+<div class="description" id="desc-srcport">
     <h2>Source Port (16 bits)</h2>
-    <p>Specifies the port number of the sending application.</p>
+    <p>Identifies the sending port. <a href="#desc-srcport">Back to header</a></p>
 </div>
-<div class="description" id="destination-port">
+<div class="description" id="desc-dstport">
     <h2>Destination Port (16 bits)</h2>
-    <p>Specifies the port number of the receiving application.</p>
+    <p>Identifies the receiving port. <a href="#desc-dstport">Back to header</a></p>
 </div>
-<div class="description" id="sequence-number">
+<div class="description" id="desc-seqnum">
     <h2>Sequence Number (32 bits)</h2>
-    <p>Sequence number of the first byte in the segment.</p>
+    <p>Has a dual role: if the SYN flag is set (1), then this is the initial sequence number. If the SYN flag is clear (0), then this is the accumulated sequence number of the first data byte of this segment for the current session. <a href="#desc-seqnum">Back to header</a></p>
 </div>
-<div class="description" id="ack-number">
+<div class="description" id="desc-acknum">
     <h2>Acknowledgment Number (32 bits)</h2>
-    <p>If the ACK flag is set, this is the next sequence number expected.</p>
+    <p>If the ACK flag is set then the value of this field is the next sequence number that the sender of the segment is expecting to receive. <a href="#desc-acknum">Back to header</a></p>
 </div>
-<div class="description" id="data-offset">
+<div class="description" id="desc-dataoffset">
     <h2>Data Offset (4 bits)</h2>
-    <p>Size of the TCP header in 32-bit words.</p>
+    <p>Specifies the size of the TCP header in 32-bit words. <a href="#desc-dataoffset">Back to header</a></p>
 </div>
-<div class="description" id="reserved">
+<div class="description" id="desc-reserved">
     <h2>Reserved (3 bits)</h2>
-    <p>Reserved for future use, set to zero.</p>
+    <p>Reserved for future use and should be set to zero. <a href="#desc-reserved">Back to header</a></p>
 </div>
-<div class="description" id="flags">
+<div class="description" id="desc-flags">
     <h2>Flags (9 bits)</h2>
-    <p>
-        <strong>NS (1 bit):</strong> ECN-nonce - Concealment protection<br>
-        <strong>CWR (1 bit):</strong> Congestion Window Reduced<br>
-        <strong>ECE (1 bit):</strong> ECN-Echo<br>
-        <strong>URG (1 bit):</strong> Urgent pointer field significant<br>
-        <strong>ACK (1 bit):</strong> Acknowledgment field significant<br>
-        <strong>PSH (1 bit):</strong> Push function<br>
-        <strong>RST (1 bit):</strong> Reset the connection<br>
-        <strong>SYN (1 bit):</strong> Synchronize sequence numbers<br>
-        <strong>FIN (1 bit):</strong> No more data from sender
-    </p>
+    <p>Contains 9 1-bit flags (NS, CWR, ECE, URG, ACK, PSH, RST, SYN, FIN) for controlling TCP flow. <a href="#desc-flags">Back to header</a></p>
 </div>
-<div class="description" id="window-size">
+<div class="description" id="desc-winsize">
     <h2>Window Size (16 bits)</h2>
-    <p>Size of the sender’s receive window.</p>
+    <p>The size of the receive window, which specifies the number of window size units (by default, bytes) that the sender of this segment is currently willing to receive. <a href="#desc-winsize">Back to header</a></p>
 </div>
-<div class="description" id="checksum">
+<div class="description" id="desc-checksum">
     <h2>Checksum (16 bits)</h2>
-    <p>Error-checking for the header and data.</p>
+    <p>The 16-bit checksum field is used for error-checking the header and data. <a href="#desc-checksum">Back to header</a></p>
 </div>
-<div class="description" id="urgent-pointer">
+<div class="description" id="desc-urgptr">
     <h2>Urgent Pointer (16 bits)</h2>
-    <p>Points to the sequence number of the byte following the urgent data.</p>
+    <p>If the URG flag is set, then this 16-bit field is an offset from the sequence number indicating the last urgent data byte. <a href="#desc-urgptr">Back to header</a></p>
 </div>
-<div class="description" id="options-padding">
-    <h2>Options and Padding (variable length)</h2>
-    <p>Used for various options and to ensure the header length is a multiple of 32 bits.</p>
+<div class="description" id="desc-options">
+    <h2>Options + Padding (Variable length)</h2>
+    <p>Additional options for the TCP header, and padding to ensure the header is a multiple of 32 bits. <a href="#desc-options">Back to header</a></p>
 </div>
 
 </body>
